Fix spacing

--- a/css/app.scss
+++ b/css/app.scss
@@ -93,7 +93,7 @@ $dark: #191919;
 .about__open {
     transition: all 1s;
     height: 38rem;
-    padding-top: 0.5rem;
+    padding-top: 1rem;
 }
 
 .read-more__link {
